Native/Test/KL/error-cannot-compare-struct-and-integer.out
error-cannot-compare-struct-and-integer.kl:7:7: error: no definition found for binary operation MyType < Integer
