Native/Test/KL/error-cannot-compare-struct-and-integer.kl
struct MyType {
  Integer foo;
};

operator entry() {
  MyType foo;
  if (foo < 3 )
    report "foo < 3";
}
